// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`created 1`] = `
.c12 {
  box-sizing: border-box;
  margin-bottom: 24px;
  margin-right: 16px;
  width: 320px;
}

.c15 {
  box-sizing: border-box;
  margin-bottom: 24px;
  width: 100%;
}

.c22 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c22:active {
  opacity: 0.56;
}

.c22:hover,
.c22:focus {
  background: #651FFF;
}

.c22:active {
  background: #354AA4;
}

.c22:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c24 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
}

.c24:active {
  opacity: 0.56;
}

.c24:hover,
.c24:focus {
  background: #651FFF;
}

.c24:active {
  background: #354AA4;
}

.c24:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c25 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c25:active {
  opacity: 0.56;
}

.c25:hover,
.c25:focus {
  background: #2C3A73;
}

.c25:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c8 {
  display: inline-block;
  transition: color .3s;
  margin-right: 8px;
  color: #FFFFFF;
}

.c14 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  color: #324148;
  background-color: #FFFFFF;
}

.c14::-ms-clear {
  display: none;
}

.c14::placeholder {
  opacity: 0.4;
}

.c14:read-only {
  cursor: not-allowed;
}

.c13 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 4px;
}

.c19 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
}

.c19:hover,
.c19:focus {
  background: #222C59;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  margin-right: auto;
  color: rgba(255,255,255,0.87);
}

.c16 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 16px;
}

.c17 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c18 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c21 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-right: 16px;
}

.c4 {
  box-sizing: border-box;
  flex: 1;
  display: flex;
  flex-direction: column;
}

.c5 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c11 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  flex-direction: row;
}

.c20 {
  box-sizing: border-box;
  margin-bottom: 8px;
  padding: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 600px;
  width: 100%;
  min-height: 330px;
}

.c10 {
  box-sizing: border-box;
  margin-bottom: 32px;
  min-height: 254px;
  flex: 0 0 auto;
  display: flex;
  flex-direction: column;
}

.c23 {
  box-sizing: border-box;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  margin: 0px;
  margin-left: 24px;
  align-items: center;
  display: flex;
  padding: 4px 8px;
  cursor: pointer;
  border-bottom: 4px solid transparent;
  font-weight: 500;
  border-bottom: 4px solid #651FFF;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  margin: 0px;
  margin-left: 24px;
  align-items: center;
  display: flex;
  padding: 4px 8px;
  cursor: pointer;
  border-bottom: 4px solid transparent;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <div
            class="c6"
            color="text.primary"
          >
            Add Application
          </div>
          <div
            class="c7"
          >
            <span
              class="c8 icon icon-magic-wand sc-AxhCb c8"
              color="light"
            />
            Automatically
          </div>
          <div
            class="c9"
          >
            <span
              class="c8 icon icon-cog sc-AxhCb c8"
              color="light"
            />
            Manually
          </div>
        </div>
        <div
          class="c10"
        >
          <div
            class="c11"
          >
            <div
              class="c12"
              width="320px"
            >
              <label
                class="c13"
                font-size="0"
              >
                App Name
              </label>
              <input
                autocomplete="off"
                class="c14"
                color="text.onLight"
                placeholder="jenkins"
                type="text"
                value=""
              />
            </div>
            <div
              class="c15"
              width="100%"
            >
              <label
                class="c13"
                font-size="0"
              >
                INTERNAL APPLICATION URL
              </label>
              <input
                autocomplete="off"
                class="c14"
                color="text.onLight"
                placeholder="https://localhost:4000"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="c16"
          >
            Use the script below to add an application to your cluster.
             
            The script will be valid for
            <span
              class="c17"
            >
               1 hour
              .
            </span>
            <div
              class="c18"
            >
              This app will be available on 
                
              <a
                class="c19"
                href="https://.localhost"
                target="_blank"
              >
                https://.localhost
              </a>
            </div>
          </div>
          <div
            class="c20"
          >
            <div
              class="c21"
              style="word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
            >
              $ sudo bash -c "$(curl -fsSL 'http://localhost/scripts/86/install-app.sh?name=test&uri=http://myapp/')"
            </div>
            <button
              class="c22"
              kind="primary"
              style="padding: 4px 8px; min-height: 10px; font-size: 10px;"
            >
              Copy
            </button>
          </div>
        </div>
        <div
          class="c23"
        >
          <button
            class="c24"
            kind="primary"
          >
            Regenerate
          </button>
          <button
            class="c25"
            kind="secondary"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`loaded 1`] = `
.c12 {
  box-sizing: border-box;
  margin-bottom: 24px;
  margin-right: 16px;
  width: 320px;
}

.c15 {
  box-sizing: border-box;
  margin-bottom: 24px;
  width: 100%;
}

.c19 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
}

.c19:active {
  opacity: 0.56;
}

.c19:hover,
.c19:focus {
  background: #651FFF;
}

.c19:active {
  background: #354AA4;
}

.c19:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c20 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c20:active {
  opacity: 0.56;
}

.c20:hover,
.c20:focus {
  background: #2C3A73;
}

.c20:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c8 {
  display: inline-block;
  transition: color .3s;
  margin-right: 8px;
  color: #FFFFFF;
}

.c14 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  color: #324148;
  background-color: #FFFFFF;
}

.c14::-ms-clear {
  display: none;
}

.c14::placeholder {
  opacity: 0.4;
}

.c14:read-only {
  cursor: not-allowed;
}

.c13 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 4px;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  margin-right: auto;
  color: rgba(255,255,255,0.87);
}

.c16 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 16px;
}

.c17 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-top: 4px;
}

.c4 {
  box-sizing: border-box;
  flex: 1;
  display: flex;
  flex-direction: column;
}

.c5 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c11 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  flex-direction: row;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 600px;
  width: 100%;
  min-height: 330px;
}

.c10 {
  box-sizing: border-box;
  margin-bottom: 32px;
  min-height: 254px;
  flex: 0 0 auto;
  display: flex;
  flex-direction: column;
}

.c18 {
  box-sizing: border-box;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  margin: 0px;
  margin-left: 24px;
  align-items: center;
  display: flex;
  padding: 4px 8px;
  cursor: pointer;
  border-bottom: 4px solid transparent;
  font-weight: 500;
  border-bottom: 4px solid #651FFF;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  margin: 0px;
  margin-left: 24px;
  align-items: center;
  display: flex;
  padding: 4px 8px;
  cursor: pointer;
  border-bottom: 4px solid transparent;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <div
            class="c6"
            color="text.primary"
          >
            Add Application
          </div>
          <div
            class="c7"
          >
            <span
              class="c8 icon icon-magic-wand sc-AxhCb c8"
              color="light"
            />
            Automatically
          </div>
          <div
            class="c9"
          >
            <span
              class="c8 icon icon-cog sc-AxhCb c8"
              color="light"
            />
            Manually
          </div>
        </div>
        <div
          class="c10"
        >
          <div
            class="c11"
          >
            <div
              class="c12"
              width="320px"
            >
              <label
                class="c13"
                font-size="0"
              >
                App Name
              </label>
              <input
                autocomplete="off"
                class="c14"
                color="text.onLight"
                placeholder="jenkins"
                type="text"
                value=""
              />
            </div>
            <div
              class="c15"
              width="100%"
            >
              <label
                class="c13"
                font-size="0"
              >
                INTERNAL APPLICATION URL
              </label>
              <input
                autocomplete="off"
                class="c14"
                color="text.onLight"
                placeholder="https://localhost:4000"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="c16"
          >
            Teleport can automatically set up application access. Provide the name and URL of your application to generate our auto-installer script.
            <div
              class="c17"
            >
              This script will install the Teleport agent to provide secure access to your application.
            </div>
          </div>
          
        </div>
        <div
          class="c18"
        >
          <button
            class="c19"
            kind="primary"
          >
            Generate Script
          </button>
          
          <button
            class="c20"
            kind="secondary"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
